# jsk_smart_apps

./: .classpath  .rosinstall  .travis.rosinstall.hydro  .travis.yml  CMakeLists.txt  Makefile  README.md  build.gradle  catkin.cmake  circle.yml  package.xml  settings.gradle  stack.xml
jsk_android_apps/: CHANGELOG.rst  CMakeLists.txt  README.md  build.gradle  gradle.properties  jsk-release-key.keystore  key.json.gpg  package.xml  settings.gradle
jsk_android_apps/android_camera_viewer/: AndroidManifest.xml  CMakeLists.txt  README.md  ant.properties  build.gradle  icon.xcf  local.properties  manifest.xml
jsk_android_apps/android_camera_viewer/launch/: usb_cam.launch
jsk_android_apps/android_camera_viewer/launch/doc/android_camera_viewer/html/: genindex.html  index-msg.html  index.html  objects.inv  search.html  searchindex.js
jsk_android_apps/android_camera_viewer/launch/doc/android_camera_viewer/html/.doctrees/: environment.pickle  index.doctree
jsk_android_apps/android_camera_viewer/launch/doc/android_camera_viewer/html/_sources/: index.txt
jsk_android_apps/android_camera_viewer/res/layout/: main.xml
jsk_android_apps/android_camera_viewer/res/values/: strings.xml
jsk_android_apps/android_camera_viewer/src/main/: AndroidManifest.xml
jsk_android_apps/android_camera_viewer/src/main/play/en-US/listing/: fulldescription  shortdescription  title
jsk_android_apps/android_camera_viewer/src/main/res/layout/: main.xml
jsk_android_apps/android_camera_viewer/src/org/ros/android/android_camera_viewer/: MainActivity.java
jsk_android_apps/android_image_view/: .project  AndroidManifest.xml  build.gradle  icon.xcf  project.properties
jsk_android_apps/android_image_view/res/layout/: main.xml
jsk_android_apps/android_image_view/res/values/: strings.xml
jsk_android_apps/android_image_view/src/main/: AndroidManifest.xml
jsk_android_apps/android_image_view/src/main/play/en-US/listing/: fulldescription  shortdescription  title
jsk_android_apps/android_image_view/src/main/res/layout/: main.xml
jsk_android_apps/android_image_view/src/main/res/values/: strings.xml
jsk_android_apps/android_image_view/src/org/ros/android/android_image_view/: CompressedImageView.java  (+3 more)
jsk_android_apps/android_sensor_message/: AndroidManifest.xml  build.gradle  icon.xcf  manifest.xml  project.properties
jsk_android_apps/android_sensor_message/res/layout/: main.xml
jsk_android_apps/android_sensor_message/res/menu/: ribbon_menu.xml
jsk_android_apps/android_sensor_message/res/values/: strings.xml
jsk_android_apps/android_sensor_message/src/com/darvds/ribbonmenu/: RibbonMenuView.java
jsk_android_apps/android_voice_message/: .project  AndroidManifest.xml  README.md  build.gradle  icon.xcf  manifest.xml
jsk_android_apps/android_voice_message/res/layout/: main.xml
jsk_android_apps/android_voice_message/res/values/: strings.xml
jsk_android_apps/android_voice_message/src/main/: AndroidManifest.xml
jsk_android_apps/android_voice_message/src/main/res/layout/: main2.xml
jsk_android_apps/android_voice_message/src/main/res/values/: strings.xml
jsk_android_apps/gradle/wrapper/: gradle-wrapper.properties
jsk_android_gui/: AndroidManifest.xml  CHANGELOG.rst  CMakeLists.txt  jsk_android_gui.app  manifest.xml  package.xml  project.properties
jsk_android_gui/launch/: set_param.launch
jsk_android_gui/param/: jsk_spots.yaml
jsk_android_gui/res/layout/: default_view.xml  main.xml  manipulation_view.xml  web_view.xml
jsk_android_gui/res/menu/: jsk_android_gui.xml
jsk_android_gui/src/org/ros/android/jskAndroidGui/: JskAndroidGui.java  JskAndroidGuiNode.java  SensorImageViewInfo.java
jsk_android_gui_api9/: CHANGELOG.rst  CMakeLists.txt  Makefile  camera_and_points.yaml  cameras.yaml  cameras_and_points_mux.launch  catkin.cmake  jsk_android_gui.app  jsk_spots.yaml  manifest.xml  package.xml  set_param.launch  start_gui.launch  user_task.yaml
jsk_android_gui_api9/src/ros/android/jskandroidgui/: JskAndroidGui.java  SensorImageViewInfo.java
jsk_pr2_core_apps/: CHANGELOG.rst  CMakeLists.txt  app_manager.launch  catkin.cmake  mainpage.dox  manifest.xml  package.xml  robot_place_info.yaml
jsk_pr2_core_apps/apps/: app.app  manifest.xml  rocon.rapps
jsk_pr2_core_apps/apps/detect_cans_in_fridge/: detect_cans_in_fridge.app  detect_cans_in_fridge.launch
jsk_pr2_core_apps/apps/jsk_android_gui/: jsk_android_gui.app  jsk_android_gui.launch  jsk_android_gui.rapp
jsk_pr2_core_apps/apps/jsk_pr2_startup/: jsk_pr2_startup.app  jsk_pr2_startup.launch  jsk_pr2_startup.rapp
jsk_pr2_core_apps/apps/pour_water_to_cup/: pour_bottle_water_to_cup.l  pour_water_to_cup.app  pour_water_to_cup.launch
jsk_pr2_core_apps/apps/pr2_hello_world/: pr2_hello_world.app  pr2_hello_world.launch  pr2_hello_world.rapp
jsk_pr2_core_apps/apps/startup/: mainpage.dox
jsk_pr2_core_apps/apps/teleop/: teleop.app  teleop.launch
jsk_pr2_core_apps/config/: local_apps.installed
jsk_pr2_core_apps/launch/: app_manager.launch  pub_places.launch  set_param.launch  start_gui.launch
jsk_pr2_core_apps/mock_apps/: local_apps.installed
jsk_pr2_core_apps/param/: points.yaml
jsk_pr2_core_apps/task_bridge_apps/launch/: place_on_table.launch
jsk_pr2_core_apps/task_bridge_apps/nodes/: place_on_table.l
jsk_rosjava_messages/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
jsk_rosjava_messages/gradle/wrapper/: gradle-wrapper.properties
jsk_rosjava_messages/jsk_gui_msgs/: build.gradle
jsk_rosjava_messages/roseus/: build.gradle
jsk_smart_gui/: .gitignore  CHANGELOG.rst  CMakeLists.txt  catkin.cmake  mainpage.dox  manifest.xml  package.xml  tablet_receiver.launch
jsk_smart_gui/src/: 3dtopixel.cpp  emergency_stop.l  eusimage_geometry.cpp  eusimage_geometry.l  extra_actions.l  get_spot.l  get_template.l  greetings.l  moveit.l  tablet_callback.l  tablet_receiver.l  utils.l
jsk_smart_gui/srv/: point2screenpoint.srv
local_app_manager/: CHANGELOG.rst  CMakeLists.txt  app_manager.launch  mainpage.dox  package.xml
local_app_manager/mock_apps/: local_apps.installed
local_app_manager/scripts/: qrcode.sh
(+185 files in other folders)
