<?xml version="1.0"?>
<package>
  <name>jsk_android_gui</name>
  <version>0.0.0</version>
  <description>jsk_android_gui written in new rosjava</description>

  <maintainer email="murase@jsk.imi.i.u-tokyo.ac.jp">Kazuto Murase</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/jsk_android_gui</url>
  <author email="murase@jsk.imi.i.u-tokyo.ac.jp">Kazuto Murase</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jsk_gui_msgs</build_depend>
  <run_depend>jsk_gui_msgs</run_depend>
  <run_depend>app_manager</run_depend>

  <export>
  </export>
</package>