<?xml version="1.0"?>
<package>
  <name>jsk_rosjava_messages</name>
  <version>0.1.0</version>
  <description>The jsk_rosjava_messages package.
    The packages which include msg and srv files to be compiled into rosjava 
    should be depended from this package.
    for example, jsk_gui_msgs will be used by rosjava program in jsk_android_gui.
  </description>
  <maintainer email="murase@todo.todo">murase</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jsk_gui_msgs</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_messages</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
  <build_depend>jsk_gui_msgs</build_depend>
</package>
