<?xml version="1.0"?>
<package>
  <name>local_app_manager</name>
  <version>0.0.1</version>
  <description>The local_app_manager package</description>
  <maintainer email="murase@jsk.imi.i.u-tokyo.ac.jp">Kazuto Murase</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/local_app_manager</url>
  <author email="murase@jsk.imi.i.u-tokyo.ac.jp">Kazuto Murase</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pr2_app_manager</build_depend>
  <build_depend>jsk_2013_04_pr2_610</build_depend>
  <build_depend>jsk_pr2_core_apps</build_depend>
  <run_depend>pr2_app_manager</run_depend>
  <run_depend>jsk_2013_04_pr2_610</run_depend>
  <run_depend>jsk_pr2_core_apps</run_depend>

  <export>
  </export>
</package>